build(project): added entities with docker-compose file, basic database and application.properties configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=LearnEase
+spring.datasource.url=jdbc:mysql://localhost:3307/learnease
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=none
