--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <spring-boot-maven-plugin.version>3.2.2</spring-boot-maven-plugin.version>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <lombok.version>1.18.30</lombok.version>
+        <spring-doc.version>2.5.0</spring-doc.version>
     </properties>
     <dependencies>
         <dependency>
@@ -86,7 +87,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.5.0</version>
+            <version>${spring-doc.version}</version>
         </dependency>
 
         <dependency>
